--- a/SciCalk/SciCalk/SciCalk.csproj
+++ b/SciCalk/SciCalk/SciCalk.csproj
@@ -63,6 +63,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="NCalcSync" Version="5.8.0" />
 	</ItemGroup>
 
 	<ItemGroup>
